Fixed !teleport_to command. Put wsgi server in background thread in mud mode. Added grim reaper in Limbo to disconnect players that sit there for too long.

--- a/tale/web/style.css
+++ b/tale/web/style.css
@@ -88,3 +88,8 @@ p, pre {
     display: block;
 }
 
+.server-error {
+    color: white;
+    background-color: maroon;
+    font-style: italic;
+}
